css/style.css
/* ... */
.team-item:hover {
  box-shadow: 0 0 30px #CCCCCC;
}

.team-item:hover .team-social {
  background: rgba(0, 0, 0, 0.5);
}

.team-item:hover .team-social a.btn:first-child {
  opacity: 1;
  margin-top: 0;
  transition: .3s 0s;
}

.team-item:hover .team-social a.btn:nth-child(2) {
  opacity: 1;
  margin-top: 0;
  transition: .3s .05s;
}

.team-item:hover .team-social a.btn:nth-child(3) {
  opacity: 1;
  margin-top: 0;
  transition: .3s .1s;
}

.team-item:hover .team-social a.btn:nth-child(4) {
  opacity: 1;
  margin-top: 0;
  transition: .3s .15s;
}

.team-item .team-img img {
  transition: .5s;
}

.team-item:hover .team-img img {
  transform: scale(1.2);
}

.testimonial-carousel .owl-dots {
  margin-top: 5px;
  text-align: center;
}

.testimonial-carousel .owl-dot {
  position: relative;
  display: inline-block;
  margin: 0 5px;
  width: 20px;
  height: 20px;
  background: #DDDDDD;
  transition: .5s;
}

.testimonial-carousel .owl-dot.active {
  width: 40px;
  background: #7AB730;
}

.testimonial-carousel .owl-item.center .testimonial-text {
  box-shadow: 0 0 30px #CCCCCC;
}

.blog-item {
  transition: .5s;
}

.blog-item:hover {
  box-shadow: 0 0 30px #CCCCCC;
}

.blog-date {
  position: absolute;
  width: 60px;
  height: 45px;
  top: 30px;
  left: -15px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  background: #7AB730;
}

.blog-date::after {
  position: absolute;
  content: "";
  width: 0;
  height: 0;
  top: -15px;
  left: 0;
  border: 8px solid;
  border-color: transparent #5f8f25 #5f8f25 transparent;
  z-index: -1;
}

.contact-form .help-block ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
}


/* NAVBAR: make navbar wider so long menu text fits better */
.nav-bar .container-lg {
  max-width: 1200px; /* adjusted to reduce excessive gap between brand and nav */
  width: 100%;
}

.navbar-brand {
  padding-left: 0 !important;
  margin-right: 0; /* reduce gap between brand and nav items */
}

/* Remove left padding on nav container/collapse so brand and nav sit closer */
.nav-bar .container-lg nav {
  padding-left: 0 !important;
}
.collapse.navbar-collapse {
  padding-left: 0 !important;
}

.navbar-nav .nav-link {
  white-space: nowrap; /* avoid wrapping text in menu items */
  padding-right: 0.4rem;
}

/* Override Bootstrap's `ml-auto` to keep nav items closer to the brand when desired */
.navbar-nav.ml-auto {
  margin-left: 0 !important;
}

@media (max-width: 992px) {
  .nav-bar .container-lg {
    max-width: 100%;
    padding-left: 0.75rem;
    padding-right: 0.75rem;
  }
  .navbar-nav .nav-link {
    white-space: normal; /* allow wrapping on small screens */
  }
}

